# EKF-State-Estimation-Cpp

./: .gitignore  CMakeLists.txt  README.md  plot.py
include/: ekf.h
results/: ekf_traj.csv  errors.csv  gps_meas.csv  odom_traj.csv  true_traj.csv
src/: ekf.cpp  main.cpp
